option('deprecation_flags',
  type: 'boolean',
  value: false,
  description: 'Use *_DISABLE_DEPRECATED flags')
option('install_tools',
  type: 'boolean',
  value: false,
  description: 'Install wnck-based tools')
option('introspection',
  type: 'feature',
  value: 'enabled',
  description: 'Enable GObject introspection')
option('gtk_doc',
  type: 'boolean',
  value: false,
  description: 'Enable generating the API reference (depends on GTK-Doc)')
