option('deprecation_flags',
  type: 'boolean',
  value: false,
  description: 'Use *_DISABLE_DEPRECATED flags')
option('install_tools',
  type: 'boolean',
  value: true,
  description: 'Install wnck-based tools')
option('startup_notification',
  type: 'feature',
  value: 'auto',
  description: 'Use Startup notification')
option('introspection',
  type: 'feature',
  value: 'enabled',
  description: 'Enable GObject introspection')
option('gtk_doc',
  type: 'boolean',
  value: false,
  description: 'Enable generating the API reference (depends on GTK-Doc)')
